--- a/src/pages/LoginPage/LoginPage.module.css
+++ b/src/pages/LoginPage/LoginPage.module.css
@@ -1,7 +1,3 @@
-.form{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    padding: 10px;
-    border: 1px solid grey;
+.text{
+    text-align: center;
 }
