--- a/src/pages/RegisterPage/RegisterPage.module.css
+++ b/src/pages/RegisterPage/RegisterPage.module.css
@@ -1,11 +1,3 @@
-.form{
-    display: flex;
-    flex-direction: column;
-    gap: 12px;
-    padding: 10px;
-    border: 1px solid grey;
-}
-.error{
-    color: orangered;
-    font-size: small;
+.text{
+    text-align: center;
 }
